<resources>
    <string name="app_name">JalIhara</string>
    <string name="button">This is button</string>
    <string name="onlyImage">This is just image</string>
    <string name="onlyTextInput">This is just text input</string>
    <string name="onlyText">This is just text</string>
    <string name="showerror">This is error</string>


    <!--Home-->
    <string name="wish">I wish you a happy life</string>


    <!--Login-->
    <string name="app_desc">Your reliable ticket application</string>
    <string name="username_hint">Input username here</string>
    <string name="password_hint">Input password here</string>
    <string name="error_message">Error Message</string>

    <!--Navbar String-->
    <string name="home">Home</string>
    <string name="aboutus">About Us</string>
    <string name="viewtickets">View Tickets</string>
    <string name="logout">Logout</string>
    <string name="contactus">Contact Us</string>

    <!--ViewTicket String-->
    <string name="tickettitle">Get Your Ticket</string>
    <string name="art">Art</string>
    <string name="music">Music</string>
    <string name="anm">A&amp;M</string>
    <string name="other">Other</string>

    <!--TicketForm String-->
    <string name="radio1">VIP</string>
    <string name="radio2">Regular</string>
    <string name="customername">Input your name here</string>
    <string name="ticketcount">Input ticket quantity here</string>
    <string name="customerrror">Name must be filled</string>
    <string name="quantityerror1">Quantity must be filled</string>
    <string name="quantityerror2">Quantity must be more than 0</string>
    <string name="quantityerror3">Please enter a valid input</string>
    <string name="passcheck">Please enter your password</string>

    <!--About Us Contact Us String-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">JalIhara is the go-to mobile app for art enthusiasts. Easily discover, select, and purchase tickets for captivating live performances. Our technology enhances art\'s accessibility and inclusivity, bringing it closer to hearts and minds worldwide.</string>
    <string name="vision">JalIhara\'s vision is to be the global leader in art ticketing, enabling easy access to diverse art performances. We foster a love for the arts, connecting artists and audiences, and contribute to the global growth and appreciation of art.</string>
    <string name="mission">Our mission at JalIhara is to revolutionize art ticketing, providing an immersive platform for easy access and purchase. We prioritize user experience, offering personalized recommendations, secure transactions, and timely event reminders. Our goal is to enrich lives by connecting users to the transformative power of art effortlessly.</string>
    <string name="informations">For more infomations about buying tickets to your favorite art performances with JalIhara, visit</string>
    <string name="address">Jl. Pakuan No. 3, Sumur Batu, Kec. Babakan Madang, Kabupaten Bogor, Jawa Barat 16810</string>

</resources>