<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightdarkblue"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="270dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="245dp"
            android:src="@drawable/loginbg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:scaleY="1.25"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:src="@mipmap/jalihara"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.106"
            android:scaleY="1.25"
            android:scaleX="1.25"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/notosansbold"
            android:gravity="center"
            android:textSize="35sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_desc"
            android:fontFamily="@font/notosansmedium"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/loginborder">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:src="@drawable/username"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="@drawable/loginborder">
            <EditText
                android:layout_marginHorizontal="5dp"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username_hint"
                android:textColorHint="@color/gray"
                android:textColor="@color/white"
                android:inputType="text"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:layout_marginLeft="60dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="start">
            <TextView
                android:id="@+id/errorusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiriregular"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="@string/error_message"
                android:textStyle="bold"
                android:textColor="@color/errormessage"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/loginborder">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:src="@drawable/password"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="@drawable/loginborder">
            <EditText
                android:layout_marginHorizontal="5dp"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_hint"
                android:textColorHint="@color/gray"
                android:textColor="@color/white"
                android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:layout_marginLeft="60dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="start">
            <TextView
                android:id="@+id/errorpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiriregular"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="@string/error_message"
                android:textStyle="bold"
                android:textColor="@color/errormessage"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:layout_width="154dp"
            android:layout_height="44dp"
            android:background="@drawable/buttonloginborder"
            android:paddingVertical="-10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:foregroundGravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:foregroundGravity="center">
                <Button
                    android:id="@+id/loginbutton"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@drawable/buttonlogin"
                    android:fontFamily="@font/notosansregular"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:text="Login"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:textSize="10dp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>