<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/headerbar"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:elevation="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/darkblue"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imagemenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:background="@color/darkblue"
                android:contentDescription="@string/button"
                android:src="@drawable/navbarmenu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pagetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.084"
                app:layout_constraintStart_toEndOf="@+id/imagemenu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.485" />

            <ImageView
                android:layout_width="67dp"
                android:layout_height="71dp"
                android:contentDescription="@string/onlyImage"
                android:src="@mipmap/jalihara"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/closenavigation"
        android:layout_width="426dp"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:elevation="10dp"
        android:outlineAmbientShadowColor="@color/transparent"
        android:outlineSpotShadowColor="@color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:outlineAmbientShadowColor="@color/transparent"
            android:outlineSpotShadowColor="@color/transparent">

            <LinearLayout
                android:id="@+id/navbar"
                android:layout_width="200dp"
                android:layout_height="350dp"
                android:background="@drawable/roundedmenu"
                android:backgroundTint="@color/lighterdarkblue"
                android:elevation="20dp"
                android:orientation="vertical"
                android:outlineAmbientShadowColor="@color/transparent"
                android:outlineSpotShadowColor="@color/transparent"
                android:layout_marginLeft="12dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/jalihara" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="JalIHara"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="190dp"
                    android:background="@drawable/roundednmenumain"
                    android:backgroundTint="@color/white">
                    <com.google.android.material.navigation.NavigationView
                        android:layout_marginTop="-8dp"
                        android:id="@+id/navigationShow"
                        android:layout_width="222dp"
                        android:layout_marginLeft="-11.2dp"
                        android:layout_height="200dp"
                        android:backgroundTint="@color/white"
                        android:outlineAmbientShadowColor="@color/transparent"
                        android:outlineSpotShadowColor="@color/transparent"
                        app:itemTextColor="@color/white"
                        app:menu="@menu/navigation"
                        app:itemIconTint="@color/white"
                        app:itemIconSize="20dp"
                        app:itemShapeFillColor="@color/lighterdarkblue"
                        app:itemShapeInsetTop="1dp"
                        app:itemShapeInsetBottom="1dp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp">

                <LinearLayout
                    android:id="@+id/navbarsub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lightdarkblue"
                    app:itemTextColor="@color/white"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.navigation.NavigationView
                        android:id="@+id/navigationsubshow"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundedmenu"
                        android:backgroundTint="@color/lightdarkblue"
                        android:outlineAmbientShadowColor="@color/transparent"
                        android:outlineSpotShadowColor="@color/transparent"
                        app:itemTextColor="@color/white"
                        app:menu="@menu/subnavigation" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>