<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:elevation="10dp">-->
<!--        <include-->
<!--            layout="@layout/navigationheader"/>-->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formticketcontent"
        android:layout_marginTop="77dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:backgroundTint="@color/purple_200"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/home_round"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="1dp"
                android:src="@drawable/backarrow" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="2.0"
            android:scaleY="2.0"
            android:src="@drawable/romeojuliet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ramayana"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.573" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp3500000"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.573" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/formticketround"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/formticketborder"
                    android:backgroundTint="@color/lightdarkblue">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/username"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:background="@drawable/formticketborder">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/customername" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/formticketborder"
                    android:backgroundTint="@color/lightdarkblue">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/username"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:background="@drawable/formticketborder">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/ticketcount"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/formticketborder"
                    android:backgroundTint="@color/lightdarkblue">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/username"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:background="@drawable/formticketborder"
                    android:backgroundTint="@color/lightdarkblue">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="Booth Type"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="120dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/formticketborder"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="58dp"
                            android:layout_height="58dp"
                            android:layout_gravity="center"
                            android:background="@drawable/formticketborder"
                            android:src="@drawable/hand"
                            android:paddingLeft="2dp"
                            android:paddingTop="1dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/formticketborder"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="58dp"
                            android:layout_height="58dp"
                            android:layout_gravity="center"
                            android:background="@drawable/formticketborder"
                            android:src="@drawable/hand"
                            android:paddingLeft="2dp"
                            android:paddingBottom="1dp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="120dp"
                    android:background="@drawable/formticketborder">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:text="@string/radio1"
                            />
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/radio2"
                            />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center">
            <Button
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="Buy"
                android:backgroundTint="@drawable/buttonlogin"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>